# MarioBrosAgent

./: .gitattributes  .gitignore  ANALISE_INCONSISTENCIAS.md  PLANO_IMPLEMENTACAO_GPPO.md  README.md  README_venv.md  RESTRUCTURING.md  agent_manager.py  dist_.py  main.py  mario_world.py  pyproject.toml  requirements.txt  setup_cpp_env.py  train.py  train_gppo.py  train_gppo_parallel.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh  test_environment.sh  vscode-settings.json
checkpoints/: mario_net.lfs.ref
src/agents/: agent.py  gppo.py  gppo_agent.py  manager.py  model.py  utils.py
src/env_manager/: __init__.py  environment.py  wrappers.py
src/helpers/: config.py  io.py  logger.py
